--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,6 +83,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="8dp"
+            android:foreground="?android:attr/selectableItemBackground"
             android:text="Forgot your password ?"
             app:layout_constraintEnd_toEndOf="@+id/inputPw"
             app:layout_constraintTop_toBottomOf="@+id/inputPw" />
